--- a/css/ProgetoFinalCSS.html
+++ b/css/ProgetoFinalCSS.html
@@ -43,7 +43,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corporis mollitia sit exercitationem vero ex sint harum laudantium, non voluptate quia quos voluptas. Est ex consequuntur recusandae eaque, ab maxime?</p>    
                 </div>
                 <div class="texto-oculto">
-                    <h3>yuuuuupiiiiiiiiiiiiiiii</h3>
+                    <h3>Criar sites exclusivos</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corporis mollitia sit exercitationem vero ex sint harum laudantium, non voluptate quia quos voluptas. Est ex consequuntur recusandae eaque, ab maxime?</p>    
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corporis mollitia sit exercitationem vero ex sint harum laudantium, non voluptate quia quos voluptas. Est ex consequuntur recusandae eaque, ab maxime?</p>    
                 </div>
                 <div class="texto-oculto">
-                    <h3>omagóóóóóóódi</h3>
+                    <h3>desenvolvimento de apps próprios</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corporis mollitia sit exercitationem vero ex sint harum laudantium, non voluptate quia quos voluptas. Est ex consequuntur recusandae eaque, ab maxime?</p>    
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corporis mollitia sit exercitationem vero ex sint harum laudantium, non voluptate quia quos voluptas. Est ex consequuntur recusandae eaque, ab maxime?</p>    
                 </div>
                 <div class="texto-oculto">
-                    <h3>EEEEELLLLLLLLLLLL CAPYBARAAAAAAAAAAA</h3>
+                    <h3>Marketing único e chamativo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corporis mollitia sit exercitationem vero ex sint harum laudantium, non voluptate quia quos voluptas. Est ex consequuntur recusandae eaque, ab maxime?</p>    
                 </div>
             </div>
@@ -74,7 +74,7 @@
     <footer>
         <div class="logo-rodape">
             <h1 class="agencia">Agencia fake</h1>
-            <p style="color: white;">Um site feito com HTML e CSS PUROOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO</p>
+            <p style="color: white;">Um site feito com HTML e CSS</p>
         </div>
         <b style="color: white;" >© Todos os direitos reservados</b>
     </footer>
