--- a/css/especificidade.html
+++ b/css/especificidade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Especificidade</title>
-    <link rel="stylesheet" href="/css/especificidade.css">
+    <link rel="stylesheet" href="css/especificidade.css">
     <style>
         h1{
             background: blue;
