--- a/css/index.html
+++ b/css/index.html
@@ -14,13 +14,16 @@
     <p style="color: black;" >Meu nome é EU estou cursando o ensino médio juntamente com o curso técnico de informatica no Instituto Federal, estou como dev atualmente e estou estudando mais do que nunca para sempre estar evoluindo na area como programador </p>
     <h2>Logo abaixo a botões que o levaram aos meu projetos demonstrativos</h2>
     <hr>
-    <a href="ProgetoFinalCSS.html" class="botaoPF">Ir para o Projeto Final</a>
+    <a href="ProgetoFinalCSS.html" class="botaoPF">Ir para o Projeto Final 1 <br>(Interface de uma agencia fake)</a>
+    <a class="botaoPF" href="float.html">Ir para o Progeto Final 2<br>(Interface de uma loja de turismo)</a>
+    <br>
+    <hr>
+    <br>
     <a class="botao" href="outra.html">Ir para Página dos Botões</a>
     <a class="botao" href="outra2.html">Ir para Página dos Espaçamentos</a>
     <a class="botao" href="position.html">Ir para Página Positions testes</a>
     <a class="botao" href="position-pratica.html">Ir para o Projeto Finalizado</a>
     <a class="botao" href="overflow.html">Ir para página Overflow <br>(controle de scrolls )</a>
-    <a class="botao" href="float.html">Ir para página Float <br>(Interface de uma loja de turismo)</a>
     <a class="botao" href="opacity.html">Ir para testes de Opacity</a>
     <a href="dropdown.html" class="botao">Ir para área de testes Dropdown</a>
     <a href="especificidade.html" class="botao">Ir para página de especificidades</a>
