--- a/css/opacity.html
+++ b/css/opacity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opacity</title>
-    <link rel="stylesheet" href="/css/opacity.css">
+    <link rel="stylesheet" href="css/opacity.css">
 </head>
 <body>
     
