--- a/css/overflow.html
+++ b/css/overflow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overflow</title>
-    <link rel="stylesheet" href="/css/overflow.css">
+    <link rel="stylesheet" href="css/overflow.css">
 </head>
 <body>
     <h1>Overflow</h1>
