--- a/css/position-pratica.html
+++ b/css/position-pratica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Na prática</title>
-    <link rel="stylesheet" href="/css/position.css">
+    <link rel="stylesheet" href="css/position.css">
 </head>
 <body>
     <div class="center">
