--- a/css/index.html
+++ b/css/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1>Esse site foi criado por EU</h1>
-    <h3>Esse site tem como objetivo demonstrar minhas habilidades com HTML e CSS (por enquanto)</h3>
+    <h1>Esse site foi criado por eu mesmo Otávio</h1>
+    <h3 style="margin-bottom: 1px;">Esse site tem com minhas habilidades com HTML e CSS</h3>
+    <h3 style="margin-top: 0px;" >Desenvolvido por : Otávio Augusto Maciel Alves</h3>
     <h2>Abaixo uma breve e direta apresentação</h2>
     <p style="color: black;" >Meu nome é EU estou cursando o ensino médio juntamente com o curso técnico de informatica no Instituto Federal, estou como dev atualmente e estou estudando mais do que nunca para sempre estar evoluindo na area como programador </p>
     <h2>Logo abaixo a botões que o levaram aos meu projetos demonstrativos</h2>
